...
        },
        bottomBar = { BottomNavigationBar(navController) }
    ) { paddingValues ->
        WebView(
            modifier = Modifier
                .fillMaxSize()
                .testTag("webView")
                .padding(paddingValues),
            state = webViewState
        )

        if (webViewState.isLoading) {
            Box(
...
                contentAlignment = Alignment.Center
            ) {
                Image(
                    modifier = Modifier
                        .graphicsLayer { rotationZ = angle },
                    painter = painterResource(id = R.drawable.radial_progress),
                    contentDescription = "loading icon"
                )
            }
        }
    }
}
