...
                    )
                } catch (e: DateTimeParseException) {
                    LocalDateTime.MIN
                }
            }

            val newsItem = News(
                id = link.hashCode(),
                newsSource = source,
                title = title ?: "",
                url = link ?: "",
                imageUrl = imageUrl,
                pubDate = pubDate,
...
