...
            if (hasBookmarkIcon) {
                IconButton(onClick = {
                    onBookmarkEvent()
                }) {
                    Icon(
                        painter = painterResource(id = R.drawable.bookmark),
                        contentDescription = "bookmark",
                        tint = if (isBookmarked) Color.Black else Color.Unspecified
                    )
                }
            }
        },
        colors = TopAppBarDefaults.smallTopAppBarColors(
...
                        isSaved.value = !isSaved.value
                        onBookmarkEvent()
                    }
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.bookmark),
                        contentDescription = "save in bookmarks",
                        tint = if (isSaved.value) webOrange else Color.Unspecified
                    )
                }
            }
        }
    }
...
