...
                SourceBadge(
                    source = Source.NYT,
                    isEnabledSource = state.sources[Source.NYT.name]!!,
                    onClickEvent = { viewModel.onEvent(NewsScreenEvent.AddRemoveNewsSource(Source.NYT)) }
                )
                SourceBadge(
                    modifier = Modifier.testTag("dev_ua_badge"),
                    source = Source.DEV_UA,
                    isEnabledSource = state.sources[Source.DEV_UA.name]!!,
                    onClickEvent = { viewModel.onEvent(NewsScreenEvent.AddRemoveNewsSource(Source.DEV_UA)) }
                )
            }

...
                        .pullRefresh(pullRefreshState),
                    state = lazyColumnState
                ) {
                    items(items = state.news, key = { it.id }) { news ->
                        NewsItem(
                            modifier = Modifier
                                .testTag("groupNewsItem")
                                .clickable {
                                    navController.navigate(Screen.FullArticle.passUrl(news.id))
                                },
                            news = news,
                            isBookmarked = news.isBookmarked,
                            onBookmarkEvent = {
...
